force-app/main/default/objects/Reporte_Calidad__c/Reporte_Calidad__c.object-meta.xml
<CustomObject>
    <label>Reporte de Calidad</label>
    <nameField>
        <label>Primer Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reportes Calidad</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>