force-app/main/default/objects/Reporte_Calidad__c/fields/Aplica_CS__c.field-meta.xml
<CustomField>
    <fullName>Aplica_CS__c</fullName>
    <label>Aplica CS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>