force-app/main/default/objects/Reporte_Calidad__c/fields/Aportacion_HNL__c.field-meta.xml
<CustomField>
    <fullName>Aportacion_HNL__c</fullName>
    <label>Aportación HNL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>