force-app/main/default/objects/Reporte_Calidad__c/fields/Aportacion_USD__c.field-meta.xml
<CustomField>
    <fullName>Aportacion_USD__c</fullName>
    <label>Aportación USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>