force-app/main/default/objects/Reporte_Calidad__c/fields/Aporte_Patrono__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Patrono__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Aporte Patrono</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>