force-app/main/default/objects/Reporte_Calidad__c/fields/Cantidad_Afiliaciones__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Afiliaciones__c</fullName>
    <label>Cantidad de Afiliaciones</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>