force-app/main/default/objects/Reporte_Calidad__c/fields/CargaHistorica__c.field-meta.xml
<CustomField>
    <fullName>CargaHistorica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CargaHistorica</label>
    <type>Checkbox</type>
</CustomField>