force-app/main/default/objects/Reporte_Calidad__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>