force-app/main/default/objects/Reporte_Calidad__c/fields/Cod_Provincia__c.field-meta.xml
<CustomField>
    <fullName>Cod_Provincia__c</fullName>
    <label>Cod Provincia</label>
    <length>40</length>
    <type>Text</type>
</CustomField>