force-app/main/default/objects/Reporte_Calidad__c/fields/Cod_Region__c.field-meta.xml
<CustomField>
    <fullName>Cod_Region__c</fullName>
    <label>Cod Region</label>
    <length>30</length>
    <type>Text</type>
</CustomField>