force-app/main/default/objects/Reporte_Calidad__c/fields/Codigo_Asesor_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Asesor_Comercial__c</fullName>
    <label>Código Asesor Comercial</label>
    <length>30</length>
    <type>Text</type>
</CustomField>