force-app/main/default/objects/Reporte_Calidad__c/fields/Codigo_T24__c.field-meta.xml
<CustomField>
    <fullName>Codigo_T24__c</fullName>
    <label>Código T24</label>
    <length>40</length>
    <type>Text</type>
</CustomField>