force-app/main/default/objects/Reporte_Calidad__c/fields/CodigoAGN__c.field-meta.xml
<CustomField>
    <fullName>CodigoAGN__c</fullName>
    <label>Codigo AGN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>