force-app/main/default/objects/Reporte_Calidad__c/fields/CodigoEmpleadoAGN__c.field-meta.xml
<CustomField>
    <fullName>CodigoEmpleadoAGN__c</fullName>
    <label>Codigo Empleado AGN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>