force-app/main/default/objects/Reporte_Calidad__c/fields/Comentarios2__c.field-meta.xml
<CustomField>
    <fullName>Comentarios2__c</fullName>
    <label>Comentarios 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>