force-app/main/default/objects/Reporte_Calidad__c/fields/Cuentas_Colectivas__c.field-meta.xml
<CustomField>
    <fullName>Cuentas_Colectivas__c</fullName>
    <label>Cuenta Colectiva</label>
    <length>40</length>
    <type>Text</type>
</CustomField>