force-app/main/default/objects/Reporte_Calidad__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Juridico</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reportes Calidad</relationshipLabel>
    <relationshipName>Reportes_Calidad</relationshipName>
    <type>Lookup</type>
</CustomField>