force-app/main/default/objects/Reporte_Calidad__c/fields/Entrega_KIT__c.field-meta.xml
<CustomField>
    <fullName>Entrega_KIT__c</fullName>
    <label>Entrega de KIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>