force-app/main/default/objects/Reporte_Calidad__c/fields/Enviar_Afiliacion__c.field-meta.xml
<CustomField>
    <fullName>Enviar_Afiliacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a Afiliacion</label>
    <type>Checkbox</type>
</CustomField>