force-app/main/default/objects/Reporte_Calidad__c/fields/Enviar_Sac__c.field-meta.xml
<CustomField>
    <fullName>Enviar_Sac__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar a Sac</label>
    <type>Checkbox</type>
</CustomField>