force-app/main/default/objects/Reporte_Calidad__c/fields/Error_Sysde__c.field-meta.xml
<CustomField>
    <fullName>Error_Sysde__c</fullName>
    <label>Error Sysde</label>
    <length>255</length>
    <type>Text</type>
</CustomField>