force-app/main/default/objects/Reporte_Calidad__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Validación</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Afiliación</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cerrado</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Devuelto</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Firma</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>