force-app/main/default/objects/Reporte_Calidad__c/fields/Estado_CIvil__c.field-meta.xml
<CustomField>
    <fullName>Estado_CIvil__c</fullName>
    <label>Estado CIvil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Soltero</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Casado</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unión Libre</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Viudo</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Divorciado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>