force-app/main/default/objects/Reporte_Calidad__c/fields/Expediente_Completo__c.field-meta.xml
<CustomField>
    <fullName>Expediente_Completo__c</fullName>
    <label>Expediente Completo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>