force-app/main/default/objects/Reporte_Calidad__c/fields/Fecha_Devolucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Devolucion__c</fullName>
    <label>Fecha de Devolución</label>
    <type>Date</type>
</CustomField>