force-app/main/default/objects/Reporte_Calidad__c/fields/Fecha_Entrega_Kit_SAC__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Entrega_Kit_SAC__c</fullName>
    <label>Fecha de Entrega de Kit SAC</label>
    <type>Date</type>
</CustomField>