force-app/main/default/objects/Reporte_Calidad__c/fields/Fecha_Envio_Memo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Envio_Memo__c</fullName>
    <label>Fecha de Envío Memo</label>
    <type>Date</type>
</CustomField>