force-app/main/default/objects/Reporte_Calidad__c/fields/Fecha_Ingreso_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ingreso_Empresa__c</fullName>
    <label>Fecha de Ingreso a la Empresa</label>
    <type>Date</type>
</CustomField>