force-app/main/default/objects/Reporte_Calidad__c/fields/Fecha_Inicio_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Aporte__c</fullName>
    <label>Fecha Inicio Aporte</label>
    <type>Date</type>
</CustomField>