force-app/main/default/objects/Reporte_Calidad__c/fields/Fecha_Validacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Validacion__c</fullName>
    <label>Fecha de Validación</label>
    <type>Date</type>
</CustomField>