force-app/main/default/objects/Reporte_Calidad__c/fields/FechaIngreso__c.field-meta.xml
<CustomField>
    <fullName>FechaIngreso__c</fullName>
    <label>Fecha de Ingreso</label>
    <type>Date</type>
</CustomField>