force-app/main/default/objects/Reporte_Calidad__c/fields/Forma_Pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_Pago__c</fullName>
    <label>Forma de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AH</fullName>
                <label>Cuenta de Ahorro</label>
            </value>
            <value>
                <fullName>CK</fullName>
                <label>Cuenta de Cheques</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>Interbanca</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Planilla</label>
            </value>
            <value>
                <fullName>TL</fullName>
                <label>Talonario</label>
            </value>
            <value>
                <fullName>TA</fullName>
                <label>Tarjeta de Credito/Debito</label>
            </value>
            <value>
                <fullName>MV</fullName>
                <label>Movil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>