force-app/main/default/objects/Reporte_Calidad__c/fields/Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Identificacion__c</fullName>
    <label>Identificación</label>
    <length>20</length>
    <type>Text</type>
</CustomField>