force-app/main/default/objects/Reporte_Calidad__c/fields/Lugar_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_Nacimiento__c</fullName>
    <label>Lugar de Nacimiento</label>
    <type>TextArea</type>
</CustomField>