force-app/main/default/objects/Reporte_Calidad__c/fields/Nombre_Conyuge__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Conyuge__c</fullName>
    <label>Nombre Conyuge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>