force-app/main/default/objects/Reporte_Calidad__c/fields/NombreAgencia__c.field-meta.xml
<CustomField>
    <fullName>NombreAgencia__c</fullName>
    <label>Nombre Agencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>