force-app/main/default/objects/Reporte_Calidad__c/fields/NombreEmpleadoAGN__c.field-meta.xml
<CustomField>
    <fullName>NombreEmpleadoAGN__c</fullName>
    <label>Nombre Empleado AGN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>