force-app/main/default/objects/Reporte_Calidad__c/fields/Num__c.field-meta.xml
<CustomField>
    <fullName>Num__c</fullName>
    <label>Num</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>