force-app/main/default/objects/Reporte_Calidad__c/fields/Numero_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Numero_Cuenta__c</fullName>
    <label>Número de Cuenta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>