force-app/main/default/objects/Reporte_Calidad__c/fields/Numero_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Cliente__c</fullName>
    <label>Número de Cliente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>