force-app/main/default/objects/Reporte_Calidad__c/fields/Numero_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Contrato__c</fullName>
    <label>Número de Contrato</label>
    <length>40</length>
    <type>Text</type>
</CustomField>