force-app/main/default/objects/Reporte_Calidad__c/fields/Oficial_SAC__c.field-meta.xml
<CustomField>
    <fullName>Oficial_SAC__c</fullName>
    <label>Oficial SAC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>