force-app/main/default/objects/Reporte_Calidad__c/fields/Periodicidad__c.field-meta.xml
<CustomField>
    <fullName>Periodicidad__c</fullName>
    <label>Periodicidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Mensual</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Trimestral</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Semestral</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Anual</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Quincenal</label>
            </value>
            <value>
                <fullName>Semanal</fullName>
                <isActive>false</isActive>
                <label>Semanal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>