force-app/main/default/objects/Reporte_Calidad__c/fields/Primer_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Primer_Apellido__c</fullName>
    <label>Primer Apellido</label>
    <length>40</length>
    <type>Text</type>
</CustomField>