force-app/main/default/objects/Reporte_Calidad__c/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <label>Procedencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>N / A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>