force-app/main/default/objects/Reporte_Calidad__c/fields/Profesion__c.field-meta.xml
<CustomField>
    <fullName>Profesion__c</fullName>
    <label>Profesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Profesion</valueSetName>
    </valueSet>
</CustomField>