force-app/main/default/objects/Reporte_Calidad__c/fields/Reporte_Calidad__c.field-meta.xml
<CustomField>
    <fullName>Reporte_Calidad__c</fullName>
    <label>Reporte de Calidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Contributivo</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Individual</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No Contributivo</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Planilla</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Ficopen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>