force-app/main/default/objects/Reporte_Calidad__c/fields/Segundo_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Nombre__c</fullName>
    <label>Segundo Nombre</label>
    <length>40</length>
    <type>Text</type>
</CustomField>