force-app/main/default/objects/Reporte_Calidad__c/fields/Seguro__c.field-meta.xml
<CustomField>
    <fullName>Seguro__c</fullName>
    <label>Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>