force-app/main/default/objects/Reporte_Calidad__c/fields/SubEstadoRCSF__c.field-meta.xml
<CustomField>
    <fullName>SubEstadoRCSF__c</fullName>
    <label>Sub Estado RC SF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NS</fullName>
                <label>Nuevo SAC</label>
            </value>
            <value>
                <fullName>NC</fullName>
                <label>Nuevo Comercial</label>
            </value>
            <value>
                <fullName>VS</fullName>
                <label>Validación Scan</label>
            </value>
            <value>
                <fullName>PS</fullName>
                <label>Pendiente Scan</label>
            </value>
            <value>
                <fullName>PF</fullName>
                <label>Pendiente Físico</label>
            </value>
            <value>
                <fullName>VF</fullName>
                <label>Validación Físico</label>
            </value>
            <value>
                <fullName>DC</fullName>
                <label>Devolución Comercial</label>
            </value>
            <value>
                <fullName>DA</fullName>
                <label>Devolución Agencia</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cerrado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>