force-app/main/default/objects/Reporte_Calidad__c/fields/Subproducto__c.field-meta.xml
<CustomField>
    <fullName>Subproducto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subproducto</label>
    <referenceTo>Subproducto__c</referenceTo>
    <relationshipLabel>Reportes Calidad</relationshipLabel>
    <relationshipName>Reportes_Calidad</relationshipName>
    <type>Lookup</type>
</CustomField>