force-app/main/default/objects/Reporte_Calidad__c/fields/Tipo_Afiliacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Afiliacion__c</fullName>
    <label>Tipo Afiliacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Afiliacion</valueSetName>
    </valueSet>
</CustomField>