force-app/main/default/objects/Reporte_Calidad__c/fields/Tipo_Afiliacion_Masiva__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Afiliacion_Masiva__c</fullName>
    <label>Tipo de Afiliacion Masiva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>Empresa Proyecto Planilla</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>