force-app/main/default/objects/Reporte_Calidad__c/fields/Tipo_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Identificacion__c</fullName>
    <label>Tipo de Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Carnet de Residente</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Cédula de Identidad</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Pasaporte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>