force-app/main/default/objects/Reporte_Calidad__c/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <label>Tipo de Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>